--- a/src/css/product.css
+++ b/src/css/product.css
@@ -42,6 +42,8 @@
     font-size: 1.2rem;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+    border: none;
+    outline: none;
 }
 
 .api-error {
