--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,45 +1,45 @@
 .product-container {
+    position: relative;
     display: flex;
+    justify-content: space-around;
     width: 100%;
-    box-sizing: border-box;
+    min-height: 100vh;
     background: linear-gradient(180deg, #001e40, #002d5f) no-repeat;
-
 }
 
 .product-nav-container {
-    padding: 8px;
-    width: 20%;
+    width: 300px;
     box-sizing: border-box;
 }
 
-.product-nav-container .product-nav-item {
-    padding: 8px 0;
-    margin: 8px 0;
+.product-nav-container .product-nav {
+    padding-top: 8px;
+    padding-left: 8px;
+    z-index: 1;
 }
 
-.product-nav-item .product-nav-name {
+.product-nav-container .product-nav-item {
     display: block;
-    text-align: center;
     width: 100%;
+    text-align: center;
     padding: 16px 0;
+    font-size: 24px;
+    box-shadow: 0 2px 3px 3px #002d5f;
+    color: rgb(102, 237, 192);
+    border-bottom: 2px solid #001e40, #002d5f;
     cursor: pointer;
-    font-size: 1.5rem;
-    background-color: #001e40;
-    color: #e5e57e;
+    z-index: 1;
 }
 
 @media (max-width: 820px) and (min-width: 375px) {
-    .product-container {
-        justify-content: space-around;
-    }
-
     .product-nav-container {
-        width: 20%;
-        box-sizing: border-box;
-        padding: 0 0 0 8px;
+        width: 150px;
+        height: 400px;
     }
+}
 
-    .product-nav-item .product-nav-name {
+@media (max-width: 394px) and (min-width: 390px) {
+    .product-nav-container .product-nav-item {
         font-size: 1.2rem;
     }
 }
